# csv-visualisation

./: .gitignore  README.md  build.py  catalog.html  index.html  pyproject.toml  requirements.txt  understanding.md
assets/: app.css  app.js  catalog.css  catalog.js
configs/: anime.py  ecommerce.py  met_museum.py  moma.py  movies.py  pokemon.py
data/: datasets.json
data/anime/: vis-data.json
data/ecommerce/: vis-data.json
data/met_museum/: vis-data.json
data/moma/: vis-data.json
data/movies/: vis-data.json
data/pokemon/: vis-data.json
scripts/: build_dataset.py  fetchers.py
src/csv_visualisation/: builder.py  cache.py  cli.py  frontend.py
src/csv_visualisation/static/: app.css  app.js
src/csv_visualisation/templates/: index.html
tests/: test_builder.py  test_cli.py
tmp-real/: goodbooks-image-sample-17.csv  goodbooks-image-sample.csv
